--- a/index.html
+++ b/index.html
@@ -3,24 +3,45 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Socket.io. Twitter example</title>
-</head>
-
-<body>
-    <h1>Socket.IO twit something</h1>
-    <ul class="tweets"></ul>
+    <title>SuperHero</title>
+    <script type='text/javascript' src='http://d3js.org/d3.v3.min.js'></script>
+    <script type='text/javascript' src='http://d3js.org/topojson.v1.min.js'></script>
+    <script type='text/javascript' src='./static/planetaryjs.min.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <script>
-    var socket = io.connect();
-    jQuery(function($) {
-        var tweetList = $('ul.tweets');
-        socket.on('tweet', function(data) {
-            tweetList.prepend('<li>' + data.user + ': ' + data.text + '//////' + data.lal + '</li>');
-        });
-    });
-    </script>
+    <link rel="stylesheet" type="text/css" href="./static/style.css">
+</head>
+<body>
+    <div id="navigator">
+        <div id="globalbar"></div>
+        <div id="bargraph"></div>
+        <div id="stream"></div>
+    </div>
+    <div id="global">
+        <div id="head1"></div>
+        <div id="global-icon">
+            <div id="superman" class="global-group">
+            </div>
+            <div id="spiderman" class="global-group">
+            </div>
+            <div id="blackwidow" class="global-group">
+            </div>
+            <div id="captainamerica" class="global-group">
+            </div>
+            <div id="batman" class="global-group">
+            </div>
+            <div id="wonderwoman" class="global-group">
+            </div>
+            <div id="thor" class="global-group">
+            </div>
+            <div id="ironman" class="global-group">
+            </div>
+        </div>
+        <canvas id='heroCanvas'></canvas>
+    </div>
+    <ul class="tweets"></ul>
+    <script type='text/javascript' src='./static/script/main.js'></script>
 </body>
 
 </html>
