finish global part

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         </div>
         <canvas id='heroCanvas'></canvas>
     </div>
+    <div id="bargraph-module">
+        
+    </div>
+    <div id="stream-module">
+        
+    </div>
     <ul class="tweets"></ul>
     <script type='text/javascript' src='./static/script/main.js'></script>
 </body>
