finish stream part

--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
         <canvas id='heroCanvas'></canvas>
     </div>
     <div id="bargraph-module">
-        
+        <div id="printtest"></div>
     </div>
     <div id="stream-module">
-        
+        <div id="stream-main">
+            <ul class="tweets">
+            </ul>
+        </div>
     </div>
-    <ul class="tweets"></ul>
     <script type='text/javascript' src='./static/script/main.js'></script>
 </body>
 
