--- a/index.html
+++ b/index.html
@@ -41,9 +41,21 @@
         <canvas id='heroCanvas'></canvas>
     </div>
     <div id="bargraph-module">
-        <div id="printtest"></div>
+        <div id="head2"></div>
+        <div id="bar-area">
+            <div id="hero1"></div>
+            <div id="hero2"></div>
+            <div id="hero3"></div>
+            <div id="hero4"></div>
+            <div id="hero5"></div>
+            <div id="hero6"></div>
+            <div id="hero7"></div>
+            <div id="hero8"></div>
+        </div>
+        <div id="barbg"></div>
     </div>
     <div id="stream-module">
+        <div id="line"></div>
         <div id="stream-main">
             <ul class="tweets">
             </ul>
