--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
     <div id="bargraph-module">
         <div id="head2"></div>
         <div id="bar-area">
+            <div id="heroT1"></div>
+            <div id="heroT2"></div>
+            <div id="heroT3"></div>
+            <div id="heroT4"></div>
+            <div id="heroT5"></div>
+            <div id="heroT6"></div>
+            <div id="heroT7"></div>
+            <div id="heroT8"></div>
             <div id="hero1"></div>
             <div id="hero2"></div>
             <div id="hero3"></div>
