--- a/index.html
+++ b/index.html
@@ -12,61 +12,70 @@
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <link rel="stylesheet" type="text/css" href="./static/style.css">
 </head>
+
 <body>
-    <div id="navigator">
-        <div id="globalbar"></div>
-        <div id="bargraph"></div>
-        <div id="stream"></div>
-    </div>
-    <div id="global">
-        <div id="head1"></div>
-        <div id="global-icon">
-            <div id="superman" class="global-group">
-            </div>
-            <div id="spiderman" class="global-group">
-            </div>
-            <div id="blackwidow" class="global-group">
-            </div>
-            <div id="captainamerica" class="global-group">
-            </div>
-            <div id="batman" class="global-group">
-            </div>
-            <div id="wonderwoman" class="global-group">
-            </div>
-            <div id="thor" class="global-group">
-            </div>
-            <div id="ironman" class="global-group">
-            </div>
+    <div id="loading-module">
+        <div id="loadingbg">
+            <div id="loadingstar"></div>
+            <div id="loadingaround"></div>
         </div>
-        <canvas id='heroCanvas'></canvas>
     </div>
-    <div id="bargraph-module">
-        <div id="head2"></div>
-        <div id="bar-area">
-            <div id="heroT1"></div>
-            <div id="heroT2"></div>
-            <div id="heroT3"></div>
-            <div id="heroT4"></div>
-            <div id="heroT5"></div>
-            <div id="heroT6"></div>
-            <div id="heroT7"></div>
-            <div id="heroT8"></div>
-            <div id="hero1"></div>
-            <div id="hero2"></div>
-            <div id="hero3"></div>
-            <div id="hero4"></div>
-            <div id="hero5"></div>
-            <div id="hero6"></div>
-            <div id="hero7"></div>
-            <div id="hero8"></div>
+    <div id="main-module">
+        <div id="navigator">
+            <div id="globalbar"></div>
+            <div id="bargraph"></div>
+            <div id="stream"></div>
         </div>
-        <div id="barbg"></div>
-    </div>
-    <div id="stream-module">
-        <div id="line"></div>
-        <div id="stream-main">
-            <ul class="tweets">
-            </ul>
+        <div id="global">
+            <div id="head1"></div>
+            <div id="global-icon">
+                <div id="superman" class="global-group">
+                </div>
+                <div id="spiderman" class="global-group">
+                </div>
+                <div id="blackwidow" class="global-group">
+                </div>
+                <div id="captainamerica" class="global-group">
+                </div>
+                <div id="batman" class="global-group">
+                </div>
+                <div id="wonderwoman" class="global-group">
+                </div>
+                <div id="thor" class="global-group">
+                </div>
+                <div id="ironman" class="global-group">
+                </div>
+            </div>
+            <canvas id='heroCanvas'></canvas>
+        </div>
+        <div id="bargraph-module">
+            <div id="head2"></div>
+            <div id="bar-area">
+                <div id="heroT1"></div>
+                <div id="heroT2"></div>
+                <div id="heroT3"></div>
+                <div id="heroT4"></div>
+                <div id="heroT5"></div>
+                <div id="heroT6"></div>
+                <div id="heroT7"></div>
+                <div id="heroT8"></div>
+                <div id="hero1"></div>
+                <div id="hero2"></div>
+                <div id="hero3"></div>
+                <div id="hero4"></div>
+                <div id="hero5"></div>
+                <div id="hero6"></div>
+                <div id="hero7"></div>
+                <div id="hero8"></div>
+            </div>
+            <div id="barbg"></div>
+        </div>
+        <div id="stream-module">
+            <div id="line"></div>
+            <div id="stream-main">
+                <ul class="tweets">
+                </ul>
+            </div>
         </div>
     </div>
     <script type='text/javascript' src='./static/script/main.js'></script>
